project-grafana-prometheus/grafana-k8s/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: grafana22c-ubuntu.exchangeweb.net
    http:
      paths:
      - backend:
          service:
            name: grafana-service
            port:
              number: 8080
        path: /
        pathType: Prefix
